<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rsvp.RsvpPortalActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.497">

        <Button
            android:id="@+id/btn_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happy_birthday_card" />

        <Button
            android:id="@+id/btn_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_calculator" />

        <Button
            android:id="@+id/btn_affirmations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/affirmations" />

        <Button
            android:id="@+id/btn_wordsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wordsapp" />

        <Button
            android:id="@+id/btn_unscrambleapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unscrambleapp" />

        <Button
            android:id="@+id/btn_cupcakeapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cupcakeapp" />

        <Button
            android:id="@+id/btn_marsphotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mars_photos" />

        <Button
            android:id="@+id/btn_sqlbasics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sql_basics" />
        <Button
            android:id="@+id/btn_busschedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_schedule" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>